all change for website

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -1,73 +1,109 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <!-- style css -->
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      * {
+        box-sizing: border-box;
+      }
 
-<head>
-    <meta charset="utf-8">
+      input[type="text"],
+      select,
+      textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-top: 6px;
+        margin-bottom: 16px;
+        resize: vertical;
+      }
 
-    <title>Shop</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-	<link href="../css/style.css" rel="stylesheet">
+      input[type="submit"] {
+        background-color: #04aa6d;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
 
-</head>
+      input[type="submit"]:hover {
+        background-color: #45a049;
+      }
 
-<body>
+      .container_contact {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+      }
+    </style>
+  </head>
+
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="../index.html">Shop</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-					<li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/index.html">Shop</a>
         </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/html/about.html">About</a>
+            </li>
+            <li>
+              <a href="/html/services.html">Services</a>
+            </li>
+            <li>
+              <a href="/html/contacts.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <div class="container">
-		        <div class="row">
+    <div class="container_contact">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input
+          type="text"
+          id="fname"
+          name="firstname"
+          placeholder="Your name.."
+        />
 
-            <div class="col-md-3">
-                <p class="lead">Shop Name</p>
-            </div>
+        <label for="lname">Last Name</label>
+        <input
+          type="text"
+          id="lname"
+          name="lastname"
+          placeholder="Your last name.."
+        />
 
-            <div class="col-md-9">        
+        <label for="country">Country</label>
+        <select id="country" name="country">
+          <option value="Lebanon">Lebanon</option>
+          <option value="canada">Canada</option>
+          <option value="usa">USA</option>
+        </select>
 
-                <div class="row">
+        <label for="subject">Subject</label>
+        <textarea
+          id="subject"
+          name="subject"
+          placeholder="Write something.."
+          style="height: 200px"
+        ></textarea>
 
-                    <p>Yudin Lex</p>
-
-                </div>
-
-            </div>
-
-        </div>
-	</div>
-
-    <div class="container">
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p></p>
-                </div>
-            </div>
-        </footer>
-
+        <input type="submit" value="Submit" />
+      </form>
     </div>
-    <!-- /.container -->
-
-</body>
-
+  </body>
 </html>
