--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
 
     <title>Shop</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet">
 	<!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -31,7 +31,7 @@
                         <a href="html/services.html">Services</a>
                     </li>
                     <li>
-                        <a href="html/contacts.html">Contact</a>
+                        <a href="/html/contacts.html">Contact</a>
                     </li>
 					
                 </ul>
@@ -61,14 +61,14 @@
                                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             </ol>
                             <div class="carousel-inner">
-                                <div class="item active">
-                                    <img class="slide-image" src="img/800x300(1).jpg" alt="">
+                                <div class="item active" style="left: 213px;">
+                                    <img class="slide-image" src="image/image1.jpg" alt="">
                                 </div>
-                                <div class="item">
-                                    <img class="slide-image" src="img/800x300(2).jpg" alt="">
+                                <div class="item" style="left: 213px;">
+                                    <img class="slide-image" src="image/image2.jpg" alt="">
                                 </div>
-                                <div class="item">
-                                    <img class="slide-image" src="img/800x300(3).jpg" alt="">
+                                <div class="item" style="left: 213px;">
+                                    <img class="slide-image" src="image/image3.jpg" alt="">
                                 </div>
                             </div>
                             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -86,14 +86,15 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(1).jpg" alt="">
+                            <img src="image/image4.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$24.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#FirstGoodModal">First Product</a>
+                                <h4 class="pull-right">99 000₽</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#FirstGoodModal">Galaxy S21</a>
                                 </h4>
+                                <p>одель с безрамочным экраном диагональю 6,8 дюйма, выполненным по технологии Dynamic AMOLED 2X.</p>
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">15 reviews</p>
+                                <p class="pull-right">66 reviews</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
@@ -107,12 +108,12 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(2).jpg" alt="">
+                            <img src="image/image5.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$64.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#SecondGoodModal">Second Product</a>
+                                <h4 class="pull-right">55 999 ₽</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#SecondGoodModal">Xiaomi 13T</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>высокопроизводительная модель, в основе которой — восьмиядерный процессор Mediatek Dimensity 8200 частотой.</p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">12 reviews</p>
@@ -129,12 +130,12 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(3).jpg" alt="">
+                            <img src="image/image6.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$74.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#ThirdGoodModal">Third Product</a>
+                                <h4 class="pull-right">20 999 ₽</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#ThirdGoodModal">Redmi 12S</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>Смартфон Xiaomi Redmi Note 12S Pearl Green оснащен дисплеем диагональю 6,43 дюйма, выполненным по технологии AMOLED.</p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">31 reviews</p>
@@ -142,7 +143,7 @@
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star-empty"></span>
                                     <span class="glyphicon glyphicon-star-empty"></span>
                                 </p>
                             </div>
@@ -151,21 +152,21 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(4).jpg" alt="">
+                            <img src="image/image7.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$84.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#FourthGoodModal">Fourth Product</a>
+                                <h4 class="pull-right">109 999 ₽</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#FourthGoodModal">Galaxy S23</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>Смартфон Samsung Galaxy S23 Ultra Light Pink — модель с безрамочным экраном диагональю 6,8 дюйма, выполненным по технологии Dynamic AMOLED 2X..</p>
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">6 reviews</p>
+                                <p class="pull-right">19 reviews</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
-                                    <span class="glyphicon glyphicon-star-empty"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
                                 </p>
                             </div>
                         </div>
@@ -173,15 +174,15 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="img/goods/320x150(5).jpg" alt="">
+                            <img src="image/image8.jpg" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">$94.99</h4>
-                                <h4><a href="" data-toggle="modal" data-target="#FifthGoodModal">Fifth Product</a>
+                                <h4 class="pull-right">18 999 ₽</h4>
+                                <h4><a href="" data-toggle="modal" data-target="#FifthGoodModal">Redmi Note 12</a>
                                 </h4>
-                                <p>This is a short description.</p>
+                                <p>Смартфон Xiaomi Redmi Note 12 Blue оснащен AMOLED-экраном диагональю 6,67 дюйма разрешением 2400x1080 пикселей.</p>
                             </div>
                             <div class="ratings">
-                                <p class="pull-right">18 reviews</p>
+                                <p class="pull-right">16 reviews</p>
                                 <p>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
