--- a/html/about.html
+++ b/html/about.html
@@ -1,73 +1,165 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+      }
 
-<head>
-    <meta charset="utf-8">
+      html {
+        box-sizing: border-box;
+      }
 
-    <title>Shop</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-	<link href="../css/style.css" rel="stylesheet">
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
+      }
 
-</head>
+      .column {
+        float: left;
+        width: 33.3%;
+        margin-bottom: 16px;
+        padding: 0 8px;
+      }
 
-<body>
+      .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin: 8px;
+      }
+
+      .about-section {
+        padding: 50px;
+        text-align: center;
+        background-color: #474e5d;
+        color: white;
+      }
+
+      .container_about {
+        padding: 0 16px;
+      }
+
+      .container_about::after,
+      .row::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+
+      .title {
+        color: grey;
+      }
+
+      .button {
+        border: none;
+        outline: 0;
+        display: inline-block;
+        padding: 8px;
+        color: white;
+        background-color: #000;
+        text-align: center;
+        cursor: pointer;
+        width: 100%;
+      }
+
+      .button:hover {
+        background-color: #555;
+      }
+
+      @media screen and (max-width: 650px) {
+        .column {
+          width: 100%;
+          display: block;
+        }
+      }
+    </style>
+  </head>
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="../index.html">Shop</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-					<li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a href="contacts.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/index.html">Shop</a>
         </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/html/about.html">About</a>
+            </li>
+            <li>
+              <a href="/html/services.html">Services</a>
+            </li>
+            <li>
+              <a href="/html/contacts.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-
-    <div class="container">
-		        <div class="row">
-
-            <div class="col-md-3">
-                <p class="lead">Shop Name</p>
-            </div>
-
-            <div class="col-md-9">        
-
-                <div class="row">
-
-                    <p>*Shop description*</p>
-
-                </div>
-
-            </div>
-
-        </div>
-	</div>
-
-    <div class="container">
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p></p>
-                </div>
-            </div>
-        </footer>
-
+    <div class="about-section">
+      <h1>About Us Page</h1>
+      <p>Some text about who we are and what we do.</p>
+      <p>
+        Resize the browser window to see that this page is responsive by the
+        way.
+      </p>
     </div>
-    <!-- /.container -->
 
-</body>
+    <h2 style="text-align: center">Our Team</h2>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img
+            src="/image/wallpaperflare.com_wallpaper.jpg"
+            alt="Jane"
+            style="width: 100%"
+          />
+          <div class="container_about">
+            <h2>Jane Doe</h2>
+            <p class="title">CEO & Founder</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>jane@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
 
+      <div class="column">
+        <div class="card">
+          <img
+            src="/image/wallpaperflare(2).jpg"
+            alt="Mike"
+            style="width: 100%"
+          />
+          <div class="container_about">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>mike@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img
+            src="/image/wallpaperflare(1).jpg"
+            alt="John"
+            style="width: 100%"
+          />
+          <div class="container_about">
+            <h2>John Doe</h2>
+            <p class="title">Designer</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>john@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
